Make BlitFramebuffer rectangles follow Qt conventions

...and add some minimal documentation since this now needs to be
documented.

[ChangeLog] (Q)BlitFramebuffer has been corrected to treat the source
and destination rectangles to be in the usual Qt coordinate system with Y
at top.

Task-number: QTBUG-65123
Change-Id: Id129e515db69d334ce5534abcb9ebf49fe0d49ab
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>